добавил метод removeFromHistory